--- a/src/Rendonan/MiniBundle/Resources/views/Default/index.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,34 @@
-Hello {{ name }}!
+{% extends '::base.html.twig' %}
+
+{% block body %}
+
+    {% block toolbar %}
+    {% endblock %}
+    <div id="banner"></div>
+
+    <div id="wrapper">
+
+        <a href="{{ path('rendonan_mini_homepage') }}">
+            <div id="header">
+
+            </div>
+        </a>
+
+        <div id="container">
+            <div id="containerBorderTop"></div>
+            <div id="content">
+
+                {% block content %}
+
+                {% endblock %}
+            </div>
+        </div>
+
+        <div id="footer">
+            &copy; Teun Kokke
+        </div>
+    </div>
+
+
+{% endblock %}
+
