Added stylesheet foundations, complete design including images and layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}Rendonan Minigame{% endblock %}</title>
+    {% block stylesheets %}
+        <link href="{{ asset('css/stylesheet.css') }}" rel="stylesheet"/>
+    {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
 </head>
