Added toolbar, useful for displaying specific user details in the future

--- a/src/Rendonan/MiniBundle/Resources/views/Default/index.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/index.html.twig
@@ -3,6 +3,16 @@
 {% block body %}
 
     {% block toolbar %}
+        <div id="toolbar">
+
+            <div class="leftFloat">
+                <span class="title">Rendonan</span>
+            </div>
+            <div class="rightFloat">
+                <!-- TOOLBAR: DISPLAY LOGIN FORM / USER DETAILS -->
+                    Logged in as [USERNAME] | Score: xxx.xxx.xxx
+            </div>
+        </div>
     {% endblock %}
     <div id="banner"></div>
 
