Sloppy attempt to add user-login functionality using sessions. It works, but still very messy and requires refactoring and janitorial work once I get a more clear view upon how things are supposed to fall in place.

--- a/src/Rendonan/MiniBundle/Resources/views/Default/Pages/main.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Pages/main.html.twig
@@ -1,6 +1,7 @@
 {% extends 'RendonanMiniBundle:Default:index.html.twig' %}
 
 {% block content %}
+    NAME: {{ name }}
     <div class="smallscore">small scorelist</div>
     <div class="list">
         PLAY MINIGAME
