--- a/src/Rendonan/MiniBundle/Resources/views/Default/Pages/thankyou.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Pages/thankyou.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="centerPanel">
         <h2>Registration Successful!</h2>
-        <p>Hello ,<br/>
+        <p>Hello , {{ name }}<br/>
             You can now log in and play the game.
         </p>
         <p>
