--- a/src/Rendonan/MiniBundle/Resources/views/Default/Includes/login.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Includes/login.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('rendonan_mini_login_check') }}" method="post">
+<form action="{{ path('rendonan_mini_login') }}" method="post">
     <label for="username">username:</label>
     <input type="text" id="username" name="_username" value=""/>
 
@@ -7,3 +7,5 @@
 
     <button type="submit"/>Log-in!</button>
 </form>
+
+<a href="{{ path('rendonan_mini_logout') }}">LOGOUT</a>
