Improved the registration to manage STATE, meaning it now keeps track of cases such as: - user successfully registered - user attempts to register but is already logged in - user attempts to log in but uses incorrect login-details
Further janitorial work required to clean up this mess (but it works!).

--- a/src/Rendonan/MiniBundle/Resources/views/Default/Pages/thankyou.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Pages/thankyou.html.twig
@@ -2,9 +2,9 @@
 
 {% block content %}
     <div class="centerPanel">
-        <h2>Registration Successful!</h2>
-        <p>Hello , {{ name }}<br/>
-            You can now log in and play the game.
+        <h2>{{ title }}</h2>
+        <p>
+            {{ message }}
         </p>
         <p>
             <a href="main">Click here to proceed to the main page!</a>
