--- a/src/Rendonan/MiniBundle/Resources/views/Default/Includes/login.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Includes/login.html.twig
@@ -1,11 +1,13 @@
-<form action="{{ path('rendonan_mini_login') }}" method="post">
-    <label for="username">username:</label>
-    <input type="text" id="username" name="_username" value=""/>
+{% if not online %}
+    <form action="{{ path('rendonan_mini_login') }}" method="post">
+        <label for="username">username:</label>
+        <input type="text" id="username" name="_username" value=""/>
 
-    <label for="password">password:</label>
-    <input type="password" name="_password"/>
+        <label for="password">password:</label>
+        <input type="password" name="_password"/>
 
-    <button type="submit"/>Log-in!</button>
-</form>
-
-<a href="{{ path('rendonan_mini_logout') }}">LOGOUT</a>
+        <button type="submit"/>Log-in!</button>
+    </form>
+{% else %}
+    Logged in as: {{ name }} | <a href="{{ path('rendonan_mini_logout') }}">LOGOUT</a>
+{% endif %}
