Updated the game page to embed the game

--- a/src/Rendonan/MiniBundle/Resources/views/Default/Pages/game.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Pages/game.html.twig
@@ -2,6 +2,10 @@
 
 {% block content %}
 
-    -- DISPLAY GAME CONTENT --
-
+    <!-- Run the game code -->
+    <div>
+        <iframe src="http://localhost/rendonan_release/web/game/index.html" width="980" height="500" frameborder="0" scrolling="no" name="game">
+            Your browser does not support iframes
+        </iframe>
+    </div>
 {% endblock %}
