Added reset-button to highscore page, which restores the search-filters to original

--- a/src/Rendonan/MiniBundle/Resources/views/Default/Pages/highscore.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Pages/highscore.html.twig
@@ -11,10 +11,9 @@
                 <input type="hidden" name="order" value="{{ filter_order }}">
                 <input class="searchbox" type="text" id="username" name="_username" value=""/>
                 <button class="submit" type="submit"/>Search</button>
-
-
-
+                <a href="{{ path('rendonan_mini_scores') }}"><button class="submit" type="button"/>Reset</button></a>
             </form>
+
         </div>
     </div>
 
