Added port specification on site, required to connect to proper game location.

--- a/src/Rendonan/MiniBundle/Resources/views/Default/Pages/game.html.twig
+++ b/src/Rendonan/MiniBundle/Resources/views/Default/Pages/game.html.twig
@@ -4,7 +4,7 @@
 
     <!-- Run the game code -->
     <div>
-        <iframe src="http://localhost/rendonan_release/web/game/index.html" width="980" height="500" frameborder="0" scrolling="no" name="game">
+        <iframe src="http://localhost:{{ port }}/rendonan_release/web/game/index.html" width="980" height="500" frameborder="0" scrolling="no" name="game">
             Your browser does not support iframes
         </iframe>
     </div>
