--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -149,6 +149,52 @@ table.highscore td.rank
 }
 /*-----------------------*/
 
+
+table.mini_highscore
+{
+    box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.44);
+    background-color: rgba(17, 17, 17, 0.56);
+    border: 1px groove rgba(209, 209, 209, 0.44);
+
+    width:300px;
+}
+table.mini_highscore td
+{
+    padding:5px;
+}
+table.mini_highscore tr.top
+{
+    background: #151515;
+    color: #FFA400;
+    font-size: 1em;
+    font-weight: bold;
+    vertical-align: middle;
+}
+table.mini_highscore tr:hover.bottom
+{
+    background: #343D47;
+}
+table.mini_highscore td
+{
+    box-shadow: inset 0px 1px 1px #545454;
+    text-align: center;
+}
+table.mini_highscore td.rank
+{
+    width:20px;
+    box-shadow: inset -2px 0px 5px #181818;
+}
+table.mini_highscore td.username
+{
+    width:90px;
+    box-shadow: inset -2px 0px 5px #181818;
+}
+table.mini_highscore td.score
+{
+    width:60px;
+    box-shadow: inset -2px 0px 5px #181818;
+}
+/*-----------------------*/
 #banner
 {
     margin: 0px 0px;
@@ -187,7 +233,7 @@ table.highscore td.rank
     overflow: auto;
     box-shadow: 0px 0px 10px #000;
     margin-top: -45px;
-    margin-bottom: 100px;
+    margin-bottom: 95px;
     color: #8A8A8A;
     text-shadow: 1px 1px 1px #000;
 }
@@ -196,8 +242,8 @@ table.highscore td.rank
 {
     float: left;
     height: 3.5em;
-    width: 520px;
-    margin: 20px;
+    width: 580px;
+    margin: 15px;
     box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.44);
     background-color: rgba(17, 17, 17, 0.56);
     border: 1px groove rgba(209, 209, 209, 0.44);
@@ -207,6 +253,8 @@ table.highscore td.rank
 #content .smallscore
 {
     float:right;
+    margin:15px;
+    /*
     margin-right:20px;
     height:400px;
     width:250px;
@@ -215,6 +263,7 @@ table.highscore td.rank
     background-color: rgba(17, 17, 17, 0.56);
     border: 1px groove rgba(209, 209, 209, 0.44);
     padding: 15px;
+    */
 }
 #content .centerPanel
 {
@@ -230,7 +279,9 @@ table.highscore td.rank
 #footer
 {
     background: rgba(255, 255, 255, 0.33);
-    width:auto;
-    height:120px;
+    width: auto;
+    height: 3em;
     box-shadow: 0px 0px 20px #000;
+    text-align: center;
+    padding-top: 1.5em;
 }
