--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -40,6 +40,7 @@ canvas {
     margin: 0px;
     height: 3em;
     width: auto;
+    min-width:1000px;
     box-shadow: 0px 3px 2px #000;
 }
 .title
@@ -52,7 +53,7 @@ canvas {
 {
     display: inline-block;
     text-align: right;
-    width:48%;
+    width:550px;
     vertical-align: top;
     border:0px;
     margin:0px;
@@ -92,7 +93,7 @@ canvas {
 .searchbar .rightFloat
 {
     float:right;
-    margin-top: -3px;
+    margin-top: -19px;
     width:auto;
 }
 .searchbar .searchbox
